<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_calibrate"
        android:title="Calibrar Brújula"
        android:icon="@drawable/ic_compass_needle_white"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tutorial"
        android:title="@string/menu_tutorial"
        android:icon="@drawable/ic_register"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_info_round_blue"
        app:showAsAction="never" />
</menu>
